--- a/package.json
+++ b/package.json
@@ -30,14 +30,23 @@
     },
     "main": "dist/index.js",
     "dependencies": {
+        "@google-cloud/firestore": "^6.4.1",
         "@nestjs/common": "^8.0.0",
         "@nestjs/core": "^8.0.0",
+        "@nestjs/jwt": "^9.0.0",
+        "@nestjs/passport": "^9.0.0",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/websockets": "^9.2.1",
+        "firebase": "^9.15.0",
         "firebase-admin": "^11.4.1",
         "firebase-functions": "^4.1.1",
+        "passport": "^0.6.0",
+        "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
-        "rxjs": "^7.2.0"
+        "rxjs": "^7.2.0",
+        "socket.io": "^4.5.4",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
